--- a/css/style.css
+++ b/css/style.css
@@ -197,3 +197,33 @@ span{
 	line-height: 28px;
 	margin-bottom: 45px;
 }
+.heading{
+	text-align: center;
+}
+.heading h2{
+	font-size: var(--h2-font);
+	font-weight: 500;
+	margin: 7px 0px 20px;
+	line-height: 1.1;
+}
+.heading h3{
+	color: var(--main-color);
+	font-size: 20px;
+	font-weight: 500;
+}
+.heading p{
+	font-size: var(--p-font);
+	color: var(--secound-color);
+	line-height: 28px;
+}
+
+
+
+.ends{
+	text-align: center;
+	padding: 40px;
+}
+.ends p{
+	font-size: var(--p-font);
+	letter-spacing: 1px;
+}
