Updated code to include list of experience

--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,14 @@ li {
     display: list-item;
     text-align: -webkit-match-parent;
 }
+::marker {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0px !important;
+    text-align: start !important;
+    text-align-last: start !important;
+}
 
 
 .ends{
