Made the redirects open on a new page "_blank"

--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,20 @@ span{
 	text-align: center;
 	cursor: pointer;
 }
+u {
+    text-decoration: underline;
+    text-decoration-line: underline;
+    text-decoration-thickness: initial;
+    text-decoration-style: initial;
+    text-decoration-color: initial;
+}
+a {
+    color: var(--main-color);
+    /* -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out; */
+}
 
 .timeline {
     border-left: 3px solid var(--main-color);
