--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,89 @@ li {
     text-align-last: start !important;
 }
 
+.section {
+    -webkit-box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+    padding: 45px;
+    background: var(--main-color);
+    margin-bottom: 45px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+}
+.text-center {
+    text-align: center!important;
+}
+.section-title {
+    margin-top: 0;
+    margin-bottom: 45px;
+    font-size: 24px;
+    text-align: center;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+.skills-section .top-skills {
+    box-sizing: border-box;
+}
+.skills-section .subtitle {
+    font-size: 18px;
+    color: var(--main-color);
+    margin-top: 0;
+    margin-bottom: 45px;
+    font-weight: 300;
+}
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.skills-section .top-skills .item {
+    margin-bottom: 45px;
+}
+.chart-easy-pie {
+    positon: relative;
+}
+.chart {
+    width: 110px;
+    height: 110px;
+    vertical-align: middle;
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 30px;
+}
+.chart span {
+    line-height: 110px;
+}
+.chart canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+.skills-section .level {
+    color: var(--text-color);
+    margin-bottom: 15px;
+}
+.skills-section .desc {
+    color: #24292e;
+}
+
 
 .ends{
 	text-align: center;
