--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,37 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 14px;
 }
 
+.section {
+    -webkit-box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+    -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+    padding: 45px;
+    background: var(--bg-color);
+    margin-bottom: 45px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+}
+.section-title {
+    margin-top: 0;
+    margin-bottom: 45px;
+    font-size: 24px;
+    text-align: center;
+}
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
 .ends{
 	text-align: center;
 	padding: 40px;
