Added Unilag education to the portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -546,6 +546,29 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 100%;
     max-width: 100%;
 }
+.education-section .item-inner {
+    padding: 0 30px;
+}
+.education-section .title {
+    font-size: 18px;
+    color: var(--main-color);
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: 500;
+    line-height: 1.2;
+}
+.education-section .sub-title {
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 300;
+}
+.education-section .time {
+    color: var(--second-color);
+    margin-bottom: 15px;
+}
+.education-section .desc {
+    color: var(--text-color);
+}
 
 .ends{
 	text-align: center;
