--- a/css/style.css
+++ b/css/style.css
@@ -406,10 +406,10 @@ li {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
-.skills-section .top-skills {
+.skills .top-skills {
     box-sizing: border-box;
 }
-.skills-section .subtitle {
+.skills .subtitle {
     font-size: 18px;
     color: var(--main-color);
     margin-top: 0;
@@ -425,7 +425,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: -15px;
     margin-left: -15px;
 }
-.skills-section .top-skills .item {
+.skills .top-skills .item {
     margin-bottom: 45px;
 }
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
@@ -478,22 +478,22 @@ canvas[Attributes] {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
-.skills-section .level {
+.skills .level {
     color: var(--text-color);
     margin-bottom: 15px;
 }
-.skills-section .desc {
+.skills .desc {
     color: var(--text-color);
 }
 
-.skills-section .subtitle {
+.skills .subtitle {
     font-size: 18px;
     color: var(--text-color);
     margin-top: 0;
     margin-bottom: 45px;
     font-weight: 300;
 }
-.skills-section .skill-tag {
+.skills .skill-tag {
     -webkit-box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
     -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
     box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
