--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ header{
     cursor: pointer;
     display: none;
 }
+
 .top-btn{
     display: inline-block;
     padding: 9px 30px;
@@ -83,6 +84,25 @@ header{
     transition: ease .50s;
 }
 .top-btn:hover{
+    transform: scale(1.1);
+    background: var(--main-color);
+    border: 2px solid var(--main-color);
+    color: var(--bg-color);
+}
+
+#top-btn{
+    display: inline-block;
+    padding: 9px 30px;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    border-radius: 30px;
+    color: var(--text-color);
+    letter-spacing: 1px;
+    font-size: var(--p-font);
+    font-weight: 500;
+    transition: ease .50s;
+}
+#top-btn:hover{
     transform: scale(1.1);
     background: var(--main-color);
     border: 2px solid var(--main-color);
