--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header{
     display: none;
 }
 
-.top-btn{
+/* .top-btn{
     display: inline-block;
     padding: 9px 30px;
     background: transparent;
@@ -88,7 +88,7 @@ header{
     background: var(--main-color);
     border: 2px solid var(--main-color);
     color: var(--bg-color);
-}
+} */
 
 #top-btn{
     display: inline-block;
